# ros-launch-perf

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  justfile  pyproject.toml
debian/: changelog  control  control.template  postinst  rules
docs/: autoware-autonomous-mode-investigation.md  cli-interface.md  composable_node_loading_optimization.md  io-helper-design.md  resource-monitoring-design.md  roadmap.md
dump_launch/: pyproject.toml  pytest.ini
dump_launch/src/dump_launch/: __init__.py  desc.py  dump.py  inspector.py  launch_dump.py  utilities.py  utils.py
dump_launch/src/dump_launch/spec/: declare_launch_argument.py  launch_description.py  node.py  substitution.py
dump_launch/src/dump_launch/visitor/: action.py  composable_node_container.py  entity.py  execute_local.py  execute_process.py  include_launch_description.py  lifecycle_node.py  load_composable_nodes.py  node.py
dump_launch/tests/: __init__.py  test_dump_launch_integration.py  test_ros_cmdline.py
fixtures/: one_node.launch.xml
launch2plan/src/launch2plan/: __init__.py  inspector.py
launch2plan/src/launch2plan/spec/: __init__.py  declare_launch_argument.py  entity.py  group_action.py  include_launch_description.py  node.py  substitution.py
launch2plan/src/launch2plan/visitor/: entity.py  execute_local.py  execute_process.py  include_launch_description.py  lifecycle_node.py  node.py
play_launch/: Cargo.toml  build.rs
play_launch/src/: component_loader.rs  composition_interfaces.rs  config.rs  container_readiness.rs  context.rs  execution.rs  launch_dump.rs  main.rs  node_cmdline.rs  options.rs  resource_monitor.rs
ros_cmdlines/: Cargo.toml
ros_cmdlines/src/: lib.rs
scripts/: build-deb.sh
scripts/autoware_test/: Makefile  README.md  plot_resource_usage.py  poses_config.yaml  run.sh  run_full_test.sh  test_autonomous_drive.py
src/dump_launch/: package.xml  pyproject.toml  setup.cfg  setup.py
src/dump_launch/dump_launch/: __init__.py  __main__.py  event_handlers.py  inspector.py  launch_dump.py  utils.py
src/dump_launch/dump_launch/visitor/: action.py  composable_node_container.py  entity.py  execute_local.py  execute_process.py  include_launch_description.py  lifecycle_node.py  load_composable_nodes.py  node.py
src/dump_launch/fixtures/: composable_node_container.launch.py
src/dump_launch/ros_cmdline/: __init__.py  cmdline.py
src/dump_launch/tests/: test_dump_launch_integration.py
src/launch_inspector/: __init__.py  __main__.py  desc.py  inspector.py
src/play_launch/: Cargo.toml  build.rs  package.xml
src/play_launch/src/: ament_index.rs  component_loader.rs  composition_interfaces.rs  config.rs  container_readiness.rs  context.rs  dump_launcher.rs  execution.rs  io_helper_client.rs  launch_dump.rs  lib.rs  main.rs  node_cmdline.rs  node_error_monitor.rs  options.rs  plot_launcher.rs  resource_monitor.rs
src/play_launch/src/ipc/: error.rs  mod.rs  protocol.rs
src/play_launch_analyzer/: README.md  package.xml  setup.py
src/play_launch_analyzer/play_launch_analyzer/: __init__.py  plot_resource_usage.py
src/play_launch_wrapper/: CMakeLists.txt  package.xml
src/play_launch_wrapper/hooks/: play_launch_path.dsv.in
src/play_launch_wrapper/scripts/: play_launch
test/autoware_planning_simulation/: .gitignore  Makefile  README.md  autoware_config.yaml
test/autoware_planning_simulation/scripts/: kill_orphan_nodes.sh  plot_resource_usage.py  start-sim-and-drive.sh  start-sim-ros2-launch.sh  start-sim.sh
test/composition_demo/: Makefile  README.md  record.json
test/composition_demo/scripts/: verify_replay.sh
test/io_stress/: .gitignore  CMakeLists.txt  Makefile  README.md  package.xml
test/io_stress/launch/: io_stress.launch.xml
test/io_stress/src/: listener.cpp  talker.cpp
transform_dump/: Cargo.toml
transform_dump/src/: launch_dump.rs  main.rs  options.rs
