[project]
name = "dump_launch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aeon", email = "jerry73204@gmail.com" }
]
dependencies = [
    "ruamel-yaml>=0.18.6",
    "pyyaml>=6.0.2",
    "lark>=1.2.2",
    "packaging>=24.1",
]
readme = "README.md"
requires-python = ">=3.10,<3.11"

[project.scripts]
"dump_launch" = "dump_launch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/dump_launch",
    "src/ros_cmdline",
]
