[package]
name = "play_launch"
version = "0.1.0"
edition = "2021"
authors = ["Lin, Hsiang-Jui <jerry73204@gmail.com>"]
description = "ROS launch record player"
homepage = "https://github.com/NEWSLabNTU/ros-launch-perf"
repository = "https://github.com/NEWSLabNTU/ros-launch-perf.git"
readme = "README.md"
license = "BSD"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.30"
itertools = "0.13.0"
libc = "0.2"
rclrs = "0.5.1"
rayon = "1.10.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
shell-quote = "0.7.1"
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
