<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dump_launch</name>
  <version>0.1.0</version>
  <description>ROS 2 launch file inspection tool - Records launch execution to JSON</description>
  <maintainer email="jerry73204@gmail.com">Jerry Lin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Python dependencies -->
  <exec_depend>python3-ruamel-yaml</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-lark</exec_depend>
  <exec_depend>python3-packaging</exec_depend>

  <!-- Test dependencies -->
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
