[package]
name = "play_launch"
version = "0.1.0"
edition = "2021"
authors = ["Lin, Hsiang-Jui <jerry73204@gmail.com>"]
description = "ROS launch record player"
homepage = "https://github.com/NEWSLabNTU/ros-launch-perf"
repository = "https://github.com/NEWSLabNTU/ros-launch-perf.git"
readme = "README.md"
license = "BSD"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.16", features = ["derive"] }
composition_interfaces = "*"
csv = "1.3"
eyre = "0.6.12"
futures = "0.3.30"
glob = "0.3"
itertools = "0.13.0"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
num_cpus = "1.16"
nvml-wrapper = "0.11"
rcl_interfaces = "*"
rclrs = "*"
rosidl_runtime_rs = "*"
rayon = "1.10.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9"
shell-quote = "0.7.1"
sysinfo = "0.32"
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
which = "6.0"

[build-dependencies]
pkg-config = "0.3"
