<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>play_launch</name>
  <version>0.1.0</version>
  <description>ROS 2 launch execution replayer - Replays recorded launch from dump_launch</description>
  <maintainer email="jerry73204@gmail.com">Jerry Lin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Rust dependencies -->
  <depend>rclrs</depend>
  <depend>composition_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
