<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>play_launch_wrapper</name>
  <version>0.1.0</version>
  <description>Wrapper script to run play_launch via ros2 run</description>
  <maintainer email="noreply@example.com">ROS Launch Perf</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>play_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
